Pseudorandom generated territory. Now you can spawn ant colonies Removed drawObstacle function

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </div>
     <div id="modes">
         <ul>
-            <li id="food-source" title="click left mouse button to spawn food source &#x0a;click left mouse button + ctrl to delete food source">Food source</li>
-            <li id="draw-obstacles" title="press left mouse button to draw obstacles">Draw obstacles</li>
+            <li id="food-source" title="click left mouse button to spawn a food source &#x0a;click left mouse button + ctrl to delete it">Food source</li>
+            <li id="base" title="click left mouse button to spawn an ant colony &#x0a;click left mouse button + ctrl to delete it">Ant Colony</li>
         </ul>
     </div>
     <canvas id="canvas">
